syntax = "proto3";

option csharp_namespace = "Twitter.Stats.API";

package tweetStat;

import "google/protobuf/empty.proto";

service TweetStatGrpc {
  rpc SendTweetStat (TweetStatRequest) returns (google.protobuf.Empty);
}

message TweetStatRequest {
  int32  TotalTweets = 1;
  int32  TweetsPerSecond = 2;
}